[gd_scene load_steps=3 format=3 uid="uid://m6xjuyy1eh1a"]

[ext_resource type="Script" path="res://scripts/InterfaceManager.gd" id="1_nmhkv"]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1150.75, 98.75)

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -92.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_nmhkv")

[node name="InterfaceBackground" type="Panel" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -96.0

[node name="BuildingTabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = -1.0
offset_right = 1019.0
offset_bottom = 87.0

[node name="Industry" type="HBoxContainer" parent="BuildingTabContainer"]
visible = false
layout_mode = 2

[node name="BuildStockpile" type="Button" parent="BuildingTabContainer/Industry"]
layout_mode = 2
text = "Stockpile"

[node name="BuildWoodCutter" type="Button" parent="BuildingTabContainer/Industry"]
layout_mode = 2
text = "Wood Cutters"

[node name="BuildStoneCutter" type="Button" parent="BuildingTabContainer/Industry"]
layout_mode = 2
text = "Stone Cutters"

[node name="Food" type="HBoxContainer" parent="BuildingTabContainer"]
visible = false
layout_mode = 2

[node name="BuildOrchard" type="Button" parent="BuildingTabContainer/Food"]
layout_mode = 2
text = "Orchard"

[node name="BuildGranary" type="Button" parent="BuildingTabContainer/Food"]
layout_mode = 2
text = "Granary"

[node name="Living" type="HBoxContainer" parent="BuildingTabContainer"]
visible = false
layout_mode = 2

[node name="BuildHouse" type="Button" parent="BuildingTabContainer/Living"]
layout_mode = 2
text = "House"

[node name="Walls" type="HBoxContainer" parent="BuildingTabContainer"]
visible = false
layout_mode = 2

[node name="BuildWall" type="Button" parent="BuildingTabContainer/Walls"]
layout_mode = 2
text = "Wall"

[node name="BuildBarArea" type="Area2D" parent="."]

[node name="BuildBarAreaCollider" type="CollisionShape2D" parent="BuildBarArea"]
position = Vector2(574.625, 44)
shape = SubResource("4")

[node name="ResourcesControl" type="Control" parent="."]
anchors_preset = 0
offset_left = 6.0
offset_top = 3.0
offset_right = 124.0
offset_bottom = 83.0

[node name="ResourcesBox" type="VBoxContainer" parent="ResourcesControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.67, 0.67)

[node name="Wood" type="Label" parent="ResourcesControl/ResourcesBox"]
layout_mode = 2
text = "Wood:"

[node name="WoodValue" type="Label" parent="ResourcesControl/ResourcesBox/Wood"]
layout_mode = 0
offset_left = 50.0
offset_right = 141.0
offset_bottom = 31.0
text = "100
"

[node name="Stone" type="Label" parent="ResourcesControl/ResourcesBox"]
layout_mode = 2
text = "Stone:"

[node name="StoneValue" type="Label" parent="ResourcesControl/ResourcesBox/Stone"]
layout_mode = 0
offset_left = 51.0
offset_right = 141.0
offset_bottom = 31.0
text = "100
"

[node name="Iron" type="Label" parent="ResourcesControl/ResourcesBox"]
layout_mode = 2
text = "Iron:"

[node name="IronValue" type="Label" parent="ResourcesControl/ResourcesBox/Iron"]
layout_mode = 0
offset_left = 51.0
offset_right = 141.0
offset_bottom = 31.0
text = "100
"

[node name="Food" type="Label" parent="ResourcesControl/ResourcesBox"]
layout_mode = 2
text = "Food:"

[node name="FoodValue" type="Label" parent="ResourcesControl/ResourcesBox/Food"]
layout_mode = 0
offset_left = 51.0
offset_right = 141.0
offset_bottom = 31.0
text = "100
"

[node name="Gold" type="Label" parent="ResourcesControl/ResourcesBox"]
layout_mode = 2
text = "Gold:"

[node name="GoldValue" type="Label" parent="ResourcesControl/ResourcesBox/Gold"]
layout_mode = 0
offset_left = 52.0
offset_right = 141.0
offset_bottom = 31.0
text = "100
"

[connection signal="button_down" from="BuildingTabContainer/Industry/BuildStockpile" to="." method="_on_BuildStockpile_button_down"]
[connection signal="button_down" from="BuildingTabContainer/Industry/BuildWoodCutter" to="." method="_on_BuildWoodCutter_button_down"]
[connection signal="button_down" from="BuildingTabContainer/Industry/BuildStoneCutter" to="." method="_on_BuildStoneCutter_button_down"]
[connection signal="button_down" from="BuildingTabContainer/Food/BuildOrchard" to="." method="_on_BuildOrchard_button_down"]
[connection signal="button_down" from="BuildingTabContainer/Food/BuildGranary" to="." method="_on_BuildGranary_button_down"]
[connection signal="button_down" from="BuildingTabContainer/Food/BuildGranary" to="." method="_on_BuildWoodCutterButton_button_down"]
[connection signal="button_down" from="BuildingTabContainer/Living/BuildHouse" to="." method="_on_BuildHouse_button_down"]
[connection signal="button_down" from="BuildingTabContainer/Walls/BuildWall" to="." method="_on_BuildWall_button_down"]
[connection signal="area_entered" from="BuildBarArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="BuildBarArea" to="." method="_on_Area2D_area_exited"]
